// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Link Rendering should match to snapshot - with color prop 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 8,
      "opacity": 1,
      "paddingBottom": 18,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "100%",
    }
  }
  testID="ButtonTest"
>
  <Text
    color="#000000"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "#000000",
          "fontFamily": "Inter",
          "fontSize": 18.67924528301887,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
      ]
    }
  >
    test label
  </Text>
</View>
`;

exports[`Button Link Rendering should match to snapshot 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderRadius": 8,
      "opacity": 1,
      "paddingBottom": 18,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "100%",
    }
  }
  testID="ButtonTest"
>
  <Text
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
          "color": "#06C263",
          "fontFamily": "Inter",
          "fontSize": 18.67924528301887,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0.25,
          "lineHeight": 20,
        },
      ]
    }
  >
    test label
  </Text>
</View>
`;
